plugins {
    id 'java'
    id 'java-library'
    id 'maven-publish'
    id 'checkstyle'
    id 'pmd'
    id 'jacoco'
    id 'maven'
}

def buildNumber = System.getenv("RELEASE_VERSION")?.replace("refs/tags/", "") ?: "DEV-SNAPSHOT"

group 'com.github.hmcts'
// Do not change this version number
version buildNumber

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
    mavenLocal()
    jcenter()
    mavenCentral()
    maven { url 'https://jitpack.io' }

    maven {
        url 'https://repo.spring.io/libs-milestone'
    }
}

// region static code analysis

checkstyle {
    maxWarnings = 0
    toolVersion = '8.10.1'
    // need to set configDir to rootDir otherwise submodule will use submodule/config/checkstyle
    configDir = new File(rootDir, 'config/checkstyle')
}

pmd {
    toolVersion = "6.19.0"
    ignoreFailures = true
    sourceSets = [sourceSets.main, sourceSets.test]
    reportsDir = file("$project.buildDir/reports/pmd")
    ruleSetFiles = files("config/pmd/ruleset.xml")
}

// endregion

// region test coverage

jacoco {
    toolVersion = "0.8.5"
}

jacocoTestReport {
    reports {
        xml.enabled = true
        csv.enabled = false
    }
}

// endregion

// region publishing

task sourcesJar(type: Jar, dependsOn: classes) {
    classifier = 'sources'
    from sourceSets.main.allSource
}

task javadocJar(type: Jar, dependsOn: javadoc) {
    classifier = 'javadoc'
    from javadoc.destinationDir
}

artifacts {
    archives sourcesJar
    archives javadocJar
}

publishing {
    publications {
        Main(MavenPublication) {
            from components.java
            artifact sourcesJar
            artifact javadocJar
            groupId project.group
            artifactId 'sscs-common'
            version project.version
        }
    }
}


dependencies {
    api("com.google.guava:guava:30.1.1-jre")
    api("org.apache.commons:commons-lang3:3.12.0")
    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.12.3'
    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8', version: '2.12.3'
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
    compile group: 'com.github.hmcts', name: 'java-logging', version: '5.1.7'
    compile group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.7.6'
    compile group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.9.3'

    compile group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
    compile group: 'com.github.everit-org.json-schema', name: 'org.everit.json.schema', version: '1.12.2'
    compile group: 'org.elasticsearch', name: 'elasticsearch', version: '7.12.1'

    compile group: 'org.springframework.retry', name: 'spring-retry', version: '1.3.1'
    compile group: 'io.github.openfeign.form', name: 'feign-form', version: '3.8.0'
    compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '4.0.0'

    compile group: 'com.github.sps.junidecode', name: 'junidecode', version: '0.3'

    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '5.0.0'
    compile group: 'com.googlecode.libphonenumber', name: 'libphonenumber', version: '8.12.23'

    compile group: 'com.opencsv', name: 'opencsv', version: '4.6'
    compile group: 'commons-io', name: 'commons-io', version: '2.8.0'

    compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'

    compile group: 'uk.gov.hmcts.reform', name: 'idam-client', version: '2.0.0'

    compile group: "com.networknt", name: "json-schema-validator", version: "1.0.53"

    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'

    testCompile group: 'junit', name: 'junit', version: 4.12
    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.10.0'
    testCompile group: 'org.springframework', name: 'spring-test', version: '5.3.7'
    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.19.0'
    testCompile group: 'org.skyscreamer', name: 'jsonassert', version: '1.5.0'
    testCompile 'pl.pragmatists:JUnitParams:1.1.1'

    testRuntime 'org.glassfish:jakarta.el:3.0.3'
    testRuntime 'org.hibernate.validator:hibernate-validator:6.1.7.Final'
    testCompileOnly 'org.projectlombok:lombok:1.18.18'
    testAnnotationProcessor "org.projectlombok:lombok:1.18.20"
}

